@@ -135,11 +135,14 @@ goto setMarlinRenderer
     echo Marlin renderer jar not found
     goto run
   )
-  set MARLIN_ENABLER=-Xbootclasspath/a:"%MARLIN_JAR%" -Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine
+  set MARLIN_ENABLER=--patch-module java.desktop="%MARLIN_JAR%"
   set JAVA_OPTS=%JAVA_OPTS% %MARLIN_ENABLER%
 goto run
 
 :run
+
+  set JAVA_OPTS=%JAVA_OPTS% --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.desktop/sun.java2d.pipe=ALL-UNNAMED
+
   cd "%GEOSERVER_HOME%"
   echo Please wait while loading GeoServer...
   echo.
